--- a/django_project/webpage/templates/webpage/download.html
+++ b/django_project/webpage/templates/webpage/download.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Download File</h1>
-{% for i in file %}
+{% for i in files %}
     <h1>Title:{{i.title}}</h1>
     <h1>DOWNLOAD THE FILE FROM HERE<a href="{{file}}" download>{{i.title}}</a></h1>
 {% endfor %}
